[package]
name = "rss-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["http2", "json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "sqlite"] }
dotenvy = "0.15"
rand = "0.8.5"
tower-cookies = "0.9.0"
bcrypt = "0.14.0"
nanoid = "0.4.0"
tower = "0.4.13"
thiserror = "1.0.40"
axum-core = "0.3.4"
